# crew-test-app

./: README.md  pyproject.toml
output/: report.md
src/test_project/: crew.py  main.py
